# unipercept

./: .dockerignore  .gitignore  Containerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/.devcontainer/: devcontainer.json
docs/: requirements.txt
sources/unipercept/: __init__.py  _api_config.py  _paths.py  file_io.py  log.py  state.py  types.py
sources/unipercept/cli/: __init__.py  __main__.py  _command.py  _config.py  _utils.py  backbones.py  check.py  config.py  datasets.py  du.py  evaluate.py  export.py  path.py  profile.py  render.py  run.py  show.py  surgeon.py  train.py
sources/unipercept/config/: __init__.py  language.py  lazy.py
sources/unipercept/data/: __init__.py  _loader.py  pseudolabeler.py  transforms.py
sources/unipercept/data/pipes/: __init__.py  _cache.py  _pil.py
sources/unipercept/data/sets/: __init__.py  _base.py  _manifest.py  _metadata.py  ade20k.py  builder.py  cityscapes.py  coco.py  csvps.py  huggingface.py  kitti_360.py  kitti_dvps.py  kitti_step.py  pascal_voc.py  pattern.py  vistas.py  webdataset.py  wilddash.py
sources/unipercept/engine/: __init__.py  _engine.py  _optimizer.py  _params.py  _scheduler.py  accelerate.py
sources/unipercept/engine/callbacks/: __init__.py  __init__.pyi  gradclip.py  precisebn.py
sources/unipercept/engine/integrations/: __init__.py  __init__.pyi  huggingface.py  slurm_integration.py  wandb_integration.py
sources/unipercept/engine/writer/: __init__.py  _base.py  memmap.py
sources/unipercept/model/: __init__.py  __init__.pyi  _base.py  _checkpoint.py  _io.py  toys.py
sources/unipercept/nn/: activations.py  init.py  norms.py  smooth.py  wrappers.py
sources/unipercept/nn/backbones/: __init__.py  _base.py  _wrapper.py  fpn.py  torchvision.py
sources/unipercept/nn/layers/: __init__.py  _sequential.py  dropout.py  dynamic_conv.py  position.py
sources/unipercept/nn/layers/conv/: _extended.py
sources/unipercept/nn/layers/linear/: __init__.py  _extended.py  _mlp.py  lora.py  moe.py
sources/unipercept/nn/layers/projection/: render.py
sources/unipercept/nn/layers/transformer/: __init__.py  attention.py  feedforward.py
sources/unipercept/nn/losses/: __init__.py  guided.py
sources/unipercept/ops/: quantile.py
sources/unipercept/render/: _plot.py  _video.py  _visualizer.py  terminal.py
sources/unipercept/tensors/: __init__.py  _camera.py  _depth.py  _flow.py  _segmentation.py  _torchvision.py  helpers.py  registry.py
sources/unipercept/utils/: __init__.py  __init__.pyi  abbreviate.py  box.py  catalog.py  check.py  dataset.py  flops.py  iopath_handlers.py  mask.py  memory.py  module.py  pickle.py  registry.py  seed.py  signal.py  status.py  tensor.py  tensorclass.py  time.py  ulid.py
sources/unipercept/vision/: __init__.py  coord.py  filter.py  geometry.py  inpaint.py  pointrend.py
tests/unipercept/: conftest.py
tests/unipercept/data/: test_ops.py
tests/unipercept/data/sets/: test_cityscapes.py  test_csvps.py  test_webdataset.py
tests/unipercept/engine/: test_engine_class.py
tests/unipercept/nn/: test_smooth.py
tests/unipercept/nn/layers/: test_nn_layers_tracker.py
tests/unipercept/nn/losses/: test_guided_losses.py
tests/unipercept/tensors/: test_camera.py
tests/unipercept/utils/: test_utils_abbreviate.py  test_utils_catalog.py  test_utils_dataset.py  test_utils_dicttools.py  test_utils_iopath_handlers.py  test_utils_mask.py  test_utils_registry.py  test_utils_tensor.py  test_utils_time.py
tests/unipercept/vision/: test_pointrend.py
