[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
keywords = [
    "perception",
    "computer vision",
    "deep learning",
    "object detection",
    "instance segmentation",
    "semantic segmentation",
]
name = "unipercept"
description = "Tools and libraries for unified multi-task vision research."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Kurt Stolle", email = "k.h.w.stolle@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "torch >= 2.5.1",
    "torchvision",
    "nvidia-ml-py",
    "tensordict >= 0.5.0",
    "einops >= 0.7.0",
    "timm >= 0.6.14",
    "bullet >= 2.2.0",
    "accelerate >= 0.32.2",
    "expath",
    "laco",
    "evaluators",
    "statistics",
    "regex",
    "scipy",
    "opencv-python",
    "omegaconf",
    "hydra-core",
    "fvcore",
    "transformers",
    "seaborn",
    "matplotlib",
    "tabulate",
    "termcolor",
    "ftfy",
    "wandb",
    "libsixel-python",
    "pycocotools",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "unipercept.__version__" }


[project.scripts]
unipercept = "unipercept.cli:__main__"
unipercept-train = "unipercept.cli.train:__main__"
unipercept-evaluate = "unipercept.cli.evaluate:__main__"
unipercept-datasets = "unipercept.cli.datasets:__main__"
unipercept-surgeon = "unipercept.cli.surgeon:__main__"

[project.entry-points.'unipercept.datasets']
cityscapes = "unipercept.data.sets.cityscapes:CityscapesDataset"
cityscapes-vps = "unipercept.data.sets.cityscapes:CityscapesVPSDataset"
cityscapes-dvps = "unipercept.data.sets.cityscapes:CityscapesDVPSDataset"
kitti-360 = "unipercept.data.sets.kitti_360:KITTI360Dataset"
kitti-dvps = "unipercept.data.sets.kitti_dvps:KITTIDVPSDataset"
kitti-step = "unipercept.data.sets.kitti_step:KITTISTEPDataset"
pascal-voc = "unipercept.data.sets.pascal_voc:PascalVOCDataset"
mapillary-vistas = "unipercept.data.sets.vistas:MapillaryVistasDataset"
wilddash = "unipercept.data.sets.wilddash:WildDashDataset"

[project.entry-points.'unipercept.backbones']
timm = "unipercept.nn.backbones.timm:TimmBackbone"
torchvision = "unipercept.nn.backbones.torchvision:TorchvisionBackbone"

[project.entry-points.expath]
unipercept-cache = "unipercept._paths:build_cache_path_handler"
unipercept-datasets = "unipercept._paths:build_datasets_path_handler"
unipercept-output = "unipercept._paths:build_output_path_handler"
unipercept-scratch = "unipercept._paths:build_scratch_path_handler"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
unipercept = ["py.typed"]

[tool.setuptools.packages.find]
where = ["sources"]
include = ["uni*"]
exclude = ["tests", "__pycache__"]
namespaces = true

[project.optional-dependencies]
tests = [
    "hypothesis",
    "bandit[toml]",
    "check-manifest",
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-sugar",
    "pytest-xdist",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-mock",
    "pytest-runner",
    "mccabe",
]
notebooks = ["jupyterlab", "ipywidgets", "ipykernel", "ipython-autotime"]
docs = ["sphinx", "sphinx-rtd-theme", "numpydoc"]

[tool.pytest.ini_options]
addopts = "--doctest-modules -m 'not integration' -m 'not gpu' --benchmark-disable"
pythonpath = ["sources"]
testpaths = "tests"
junit_family = "xunit2"
junit_suite_name = "tests"
markers = [
    "integration: marks as integration test",
    "notebooks: marks as notebook test",
    "gpu: marks as gpu test",
    "slow: marks tests as slow",
    "unit: fast offline tests",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.pyright]
pythonPlatform = "Linux"
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["sources"]
exclude = [
    "datasets",
    "dependencies",
    "output",
    "**/prototypes",
    "**/tests",
    "**/__pycache__",
]
executionEnvironments = [{ root = "sources" }]
reportImplicitOverride = "warning"
reportImportCycles = true
reportMatchNotExhaustive = true
reportMissingImports = true
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"
reportShadowedImports = true
reportUnusedImport = "none"
reportUnusedVariable = "none"
strictListInference = true
strictSetInference = true

[tool.ruff]
target-version = 'py312'
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "F",    # PyFlakes
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "B",    # Bugbear
    "C90",  # McCabe Complexity
    "I",    # isort
    "C4",   # Comprehensions
    "EM",   # Error message 
    "ICN",  # Import conventions
    "G",    # Logging format
    "PGH",  # Pygrep
    "Q",    # Quotes
    "PIE",  # PIE
    "PL",   # Pylint
    "PT",   # Pytest style
    "PTH",  # Pathlib
    "RET",  # Return
    "SIM",  # Simplify
    "UP",   # Pyupgrade
    "FURB", # Refurb
    "PYI",  # Pyi
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F401"]
"**/__init__.pyi" = ["F403", "F401"]
"tests/**/*.py" = ["F401", "F841", "E501", "E722", "E741", "PLR2004", "PGH003"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
